small modifications to docs

--- a/docstrings/astro/frame_conversion.yaml
+++ b/docstrings/astro/frame_conversion.yaml
@@ -122,13 +122,13 @@ functions:
         type: Boolean # [py]
       - name: doesNaxisPointAwayFromCentralBody # [cpp]
         type: bool # [cpp]
-        description: Boolean (default true) defining whether the N axis of teh TNW frame points 
+        description: Boolean (default true) defining whether the N axis of teh TNW frame points
                      away from the central body (if true) or towards the central body (if false)
 
 
     returns:
         type: numpy.ndarray # [py]
-        description: Rotation matrix from TNW to inertial frame.
+        description: Rotation matrix from TNW to inertial frame # [py]
 
 
 
@@ -146,20 +146,20 @@ functions:
     parameters:
       - name: pole_declination # [py]
         type: float # [py]
-        description: Declination of body pole in inertial frame
+        description: Declination of body pole in inertial frame # [py]
 
       - name: pole_right_ascension # [py]
         type: float # [py]
-        description: Right ascension of body pole in inertial frame
+        description: Right ascension of body pole in inertial frame # [py]
 
       - name: prime_meridian_longitude # [py]
         type: float # [py]
-        description: Longitude of prime meridian w.r.t. intermediate framee)
+        description: Longitude of prime meridian w.r.t. intermediate frame # [py]
 
 
     returns:
         type: numpy.ndarray # [py]
-        description: Rotation matrix from inertial to body-fixed frame
+        description: Rotation matrix from inertial to body-fixed frame # [py]
 
 
   - name: body_fixed_to_inertial_rotation_matrix # [py]
@@ -173,20 +173,20 @@ functions:
       succesive z-x-z Euler angle rotation (see Archinal, B. A., et al. *Report of the IAU working
       group on cartographic coordinates and rotational elements: 2015*. Celestial Mechanics and
       Dynamical Astronomy 130.3 (2018): 1-46)
-    parameters:
+    parameters: # [py]
       - name: pole_declination # [py]
         type: float # [py]
-        description: Declination of body pole in inertial frame
+        description: Declination of body pole in inertial frame # [py]
 
       - name: pole_right_ascension # [py]
         type: float # [py]
-        description: Right ascension of body pole in inertial frame
+        description: Right ascension of body pole in inertial frame # [py]
 
       - name: prime_meridian_longitude # [py]
         type: float # [py]
-        description: Longitude of prime meridian w.r.t. intermediate framee)
+        description: Longitude of prime meridian w.r.t. intermediate frame # [py]
 
 
-    returns:
+    returns: # [py]
         type: numpy.ndarray # [py]
-        description: Rotation matrix from body-fixed to inertial  frame
+        description: Rotation matrix from body-fixed to inertial frame # [py]
