--- a/docstrings/numerical_simulation/environment_setup/atmosphere.yaml
+++ b/docstrings/numerical_simulation/environment_setup/atmosphere.yaml
@@ -51,7 +51,7 @@ classes:
         parameters: # [cpp]
           - name: None # [cpp]
         returns: # [cpp]
-            type: WindModelSettings # [cpp]
+          - type: WindModelSettings # [cpp]
             description: Wind settings of the atmosphere model settings object. # [cpp]
 
 
@@ -107,9 +107,9 @@ functions:
           Reference frame in which constant wind velocity is defined.
 
     returns:
-        type: ConstantWindModelSettings  # [py]
+      - type: ConstantWindModelSettings  # [py]
         description: # [py]
-        type: ConstantWindModelSettings  # [cpp]
+      - type: ConstantWindModelSettings  # [cpp]
         description: # [cpp]
 
 
@@ -137,9 +137,9 @@ functions:
           Reference frame in which constant wind velocity is defined.
 
     returns:
-        type: CustomWindModelSettings  # [py]
+      - type: CustomWindModelSettings  # [py]
         description: # [py]
-        type: CustomWindModelSettings  # [cpp]
+      - type: CustomWindModelSettings  # [cpp]
         description: # [cpp]
 
 
@@ -162,9 +162,9 @@ functions:
           Body for which pre-defined model settings are to be loaded. Available bodies "Earth", "Mars".
 
     returns:
-        type: ExponentialAtmosphereSettings  # [py]
+      - type: ExponentialAtmosphereSettings  # [py]
         description: # [py]
-        type: ExponentialAtmosphereSettings  # [cpp]
+      - type: ExponentialAtmosphereSettings  # [cpp]
         description: # [cpp]
 
 
@@ -190,10 +190,10 @@ functions:
         description: "Atmospheric density at ground level."
 
     returns:
-      type: ExponentialAtmosphereSettings # [py]
-      description: # [py]
-      type: ExponentialAtmosphereSettings # [cpp]
-      description: # [cpp]
+      - type: ExponentialAtmosphereSettings # [py]
+        description: # [py]
+      - type: ExponentialAtmosphereSettings # [cpp]
+        description: # [cpp]
 
 
   - name: exponential # [py]
@@ -238,10 +238,10 @@ functions:
         description: "Ratio of specific heats for (constant) atmospheric chemical composition."
 
     returns:
-      type: ExponentialAtmosphereSettings # [py]
-      description: # [py]
-      type: ExponentialAtmosphereSettings # [cpp]
-      description: # [cpp]
+      - type: ExponentialAtmosphereSettings # [py]
+        description: # [py]
+      - type: ExponentialAtmosphereSettings # [cpp]
+        description: # [cpp]
 
 
 
@@ -254,10 +254,10 @@ functions:
       This function creates an instance of an `AtmosphereSettings` object.
 
     returns:
-      type: AtmosphereSettings # [py]
-      # description: AtmosphereSettings object of athmosphereType nrlmsise00. # [py] athmosphereType enum not exposed
-      type: AtmosphereSettings # [cpp]
-      description: AtmosphereSettings object of athmosphereType nrlmsise00.# [cpp]
+      - type: AtmosphereSettings # [py]
+        description:  # [py]
+      - type: AtmosphereSettings # [cpp]
+        description: AtmosphereSettings object of athmosphereType nrlmsise00.# [cpp]
 
 
   - name: custom_constant_temperature # [py]
@@ -296,10 +296,10 @@ functions:
         description: "Ratio of specific heats for (constant) atmospheric chemical composition."
 
     returns:
-      type: CustomConstantTemperatureAtmosphereSettings # [py]
-      description: # [py]
-      type: CustomConstantTemperatureAtmosphereSettings # [cpp]
-      description: # [cpp]
+      - type: CustomConstantTemperatureAtmosphereSettings # [py]
+        description: # [py]
+      - type: CustomConstantTemperatureAtmosphereSettings # [cpp]
+        description: # [cpp]
 
 
   - name: custom_constant_temperature # [py]
@@ -338,10 +338,10 @@ functions:
         description: "Ratio of specific heats for (constant) atmospheric chemical composition."
 
     returns:
-      type: CustomConstantTemperatureAtmosphereSettings # [py]
-      description: # [py]
-      type: CustomConstantTemperatureAtmosphereSettings # [cpp]
-      description: # [cpp]
+      - type: CustomConstantTemperatureAtmosphereSettings # [py]
+        description: # [py]
+      - type: CustomConstantTemperatureAtmosphereSettings # [cpp]
+        description: # [cpp]
 
 
   - name: scaled # [py]
@@ -363,7 +363,7 @@ functions:
         type: float # [py]
       - name: scaling # [cpp]
         type: std::function< double( const double ) >  # [cpp]
-        description: "Specifies air density scaling factors as a function of altitude."
+        description: "Specifies air density scaling factors as a function of time."
 
       - name: is_scaling_absolute # [py]
         type: bool, default=false # [py]
@@ -373,10 +373,10 @@ functions:
           Boolean indicating whether density scaling is absolute. Setting this boolean to true will add the scaling value to the basline density, instead of the default behaviour of multiplying the baseline density by the scaling value.
 
     returns:
-      type: ScaledAtmosphereSettings # [py]
-      description: # [py]
-      type: ScaledAtmosphereSettings # [cpp]
-      description: # [cpp]
+      - type: ScaledAtmosphereSettings # [py]
+        description: # [py]
+      - type: ScaledAtmosphereSettings # [cpp]
+        description: # [cpp]
 
 
   - name: scaled # [py]
@@ -408,9 +408,9 @@ functions:
           Boolean indicating whether density scaling is absolute. Setting this boolean to true will add the scaling value to the basline density, instead of the default behaviour of multiplying the baseline density by the scaling value.
 
     returns:
-      type: ScaledAtmosphereSettings # [py]
-      description: # [py]
-      type: ScaledAtmosphereSettings # [cpp]
-      description: # [cpp]
+      - type: ScaledAtmosphereSettings # [py]
+        description: # [py]
+      - type: ScaledAtmosphereSettings # [cpp]
+        description: # [cpp]
 
 
